backend/Project/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    NEGACION
    RCOS
    RLENGTH
    RLOG
    RLOG10
    RLOWER
    RMUTABLE
    RNFLOAT
    RNPARSE
    RNSTRING
    RNTRUNC
    RNTYPEOF
    RSIN
    RSQRT
    RTAN
    RUPPER

Grammar

Rule 0     S' -> start
Rule 1     start -> instrucciones
Rule 2     instrucciones -> instrucciones instruccion PUNTOCOMA
Rule 3     instrucciones -> instruccion PUNTOCOMA
Rule 4     instruccion -> instruccion_imprimir
Rule 5     instruccion -> instruccion_if
Rule 6     instruccion -> instruccion_asignacion
Rule 7     instruccion -> instruccion_while
Rule 8     instruccion -> instruccion_break
Rule 9     instruccion -> instruccion_return
Rule 10    instruccion -> instruccion_funcion
Rule 11    instruccion -> instruccion_llamada
Rule 12    instruccion -> instruccion_continue
Rule 13    instruccion -> instruccion_for
Rule 14    instruccion -> instruccion_struct
Rule 15    instruccion_imprimir -> RPRINTLN P_IZQ parametros_print P_DER
Rule 16    instruccion_imprimir -> RPRINT P_IZQ parametros_print P_DER
Rule 17    parametros_print -> parametros_print COMA parametro_print
Rule 18    parametros_print -> parametro_print
Rule 19    parametro_print -> expresion
Rule 20    instruccion_if -> RIF expresion instrucciones REND
Rule 21    instruccion_if -> RIF expresion instrucciones RELSE instrucciones REND
Rule 22    instruccion_if -> RIF expresion instrucciones listaELSEIF REND
Rule 23    listaELSEIF -> RELSEIF expresion instrucciones
Rule 24    listaELSEIF -> RELSEIF expresion instrucciones RELSE instrucciones
Rule 25    listaELSEIF -> RELSEIF expresion instrucciones listaELSEIF
Rule 26    instruccion_asignacion -> ID IGUAL expresion
Rule 27    instruccion_asignacion -> ID accesos IGUAL expresion
Rule 28    instruccion_while -> RWHILE expresion instrucciones REND
Rule 29    instruccion_break -> RBREAK
Rule 30    instruccion_continue -> RCONTINUE
Rule 31    instruccion_return -> RRETURN
Rule 32    instruccion_return -> RRETURN expresion
Rule 33    instruccion_funcion -> RFUNC ID P_IZQ parametros P_DER TIPO tipo_dato instrucciones REND
Rule 34    instruccion_funcion -> RFUNC ID P_IZQ P_DER TIPO tipo_dato instrucciones REND
Rule 35    parametros -> parametros COMA parametro
Rule 36    parametros -> parametro
Rule 37    parametro -> ID TIPO tipo_dato
Rule 38    parametro -> ID TIPO ID
Rule 39    tipo_dato -> RINT
Rule 40    tipo_dato -> RFLOAT
Rule 41    tipo_dato -> RSTRING
Rule 42    tipo_dato -> RCHAR
Rule 43    tipo_dato -> RBOOL
Rule 44    instruccion_llamada -> ID P_IZQ P_DER
Rule 45    instruccion_llamada -> ID P_IZQ expresiones P_DER
Rule 46    expresiones -> expresiones COMA expresion
Rule 47    expresiones -> expresion
Rule 48    instruccion_struct -> RSTRUCT ID atributos REND
Rule 49    atributos -> atributos parametro PUNTOCOMA
Rule 50    atributos -> parametro PUNTOCOMA
Rule 51    instruccion_for -> RFOR ID RIN range instrucciones REND
Rule 52    range -> expresion RANGO expresion
Rule 53    range -> expresion
Rule 54    expresion -> expresion MAS expresion
Rule 55    expresion -> expresion MENOS expresion
Rule 56    expresion -> expresion POR expresion
Rule 57    expresion -> expresion DIVIDIDO expresion
Rule 58    expresion -> expresion MODULO expresion
Rule 59    expresion -> expresion POTENCIA expresion
Rule 60    expresion -> expresion MENOR expresion
Rule 61    expresion -> expresion MENORIGUAL expresion
Rule 62    expresion -> expresion MAYOR expresion
Rule 63    expresion -> expresion MAYORIGUAL expresion
Rule 64    expresion -> expresion COMPARACION expresion
Rule 65    expresion -> expresion DISTINTO expresion
Rule 66    expresion -> expresion AND expresion
Rule 67    expresion -> expresion OR expresion
Rule 68    expresion -> ID
Rule 69    expresion -> instruccion_llamada
Rule 70    expresion -> expresion DOT ID
Rule 71    expresion -> ID DOT ID
Rule 72    expresion -> ID accesos
Rule 73    accesos -> accesos acceso
Rule 74    accesos -> acceso
Rule 75    acceso -> C_IZQ expresion C_DER
Rule 76    expresion -> ENTERO
Rule 77    expresion -> P_IZQ expresion P_DER
Rule 78    expresion -> C_IZQ parametros_print C_DER
Rule 79    expresion -> DECIMAL
Rule 80    expresion -> CADENA
Rule 81    expresion -> CARACTER
Rule 82    expresion -> RTRUE
Rule 83    expresion -> RFALSE

Terminals, with rules where they appear

AND                  : 66
CADENA               : 80
CARACTER             : 81
COMA                 : 17 35 46
COMPARACION          : 64
C_DER                : 75 78
C_IZQ                : 75 78
DECIMAL              : 79
DISTINTO             : 65
DIVIDIDO             : 57
DOT                  : 70 71
ENTERO               : 76
ID                   : 26 27 33 34 37 38 38 44 45 48 51 68 70 71 71 72
IGUAL                : 26 27
MAS                  : 54
MAYOR                : 62
MAYORIGUAL           : 63
MENOR                : 60
MENORIGUAL           : 61
MENOS                : 55
MODULO               : 58
NEGACION             : 
OR                   : 67
POR                  : 56
POTENCIA             : 59
PUNTOCOMA            : 2 3 49 50
P_DER                : 15 16 33 34 44 45 77
P_IZQ                : 15 16 33 34 44 45 77
RANGO                : 52
RBOOL                : 43
RBREAK               : 29
RCHAR                : 42
RCONTINUE            : 30
RCOS                 : 
RELSE                : 21 24
RELSEIF              : 23 24 25
REND                 : 20 21 22 28 33 34 48 51
RFALSE               : 83
RFLOAT               : 40
RFOR                 : 51
RFUNC                : 33 34
RIF                  : 20 21 22
RIN                  : 51
RINT                 : 39
RLENGTH              : 
RLOG                 : 
RLOG10               : 
RLOWER               : 
RMUTABLE             : 
RNFLOAT              : 
RNPARSE              : 
RNSTRING             : 
RNTRUNC              : 
RNTYPEOF             : 
RPRINT               : 16
RPRINTLN             : 15
RRETURN              : 31 32
RSIN                 : 
RSQRT                : 
RSTRING              : 41
RSTRUCT              : 48
RTAN                 : 
RTRUE                : 82
RUPPER               : 
RWHILE               : 28
TIPO                 : 33 34 37 38
error                : 

Nonterminals, with rules where they appear

acceso               : 73 74
accesos              : 27 72 73
atributos            : 48 49
expresion            : 19 20 21 22 23 24 25 26 27 28 32 46 47 52 52 53 54 54 55 55 56 56 57 57 58 58 59 59 60 60 61 61 62 62 63 63 64 64 65 65 66 66 67 67 70 75 77
expresiones          : 45 46
instruccion          : 2 3
instruccion_asignacion : 6
instruccion_break    : 8
instruccion_continue : 12
instruccion_for      : 13
instruccion_funcion  : 10
instruccion_if       : 5
instruccion_imprimir : 4
instruccion_llamada  : 11 69
instruccion_return   : 9
instruccion_struct   : 14
instruccion_while    : 7
instrucciones        : 1 2 20 21 21 22 23 24 24 25 28 33 34 51
listaELSEIF          : 22 25
parametro            : 35 36 49 50
parametro_print      : 17 18
parametros           : 33 35
parametros_print     : 15 16 17 78
range                : 51
start                : 0
tipo_dato            : 33 34 37

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . instrucciones
    (2) instrucciones -> . instrucciones instruccion PUNTOCOMA
    (3) instrucciones -> . instruccion PUNTOCOMA
    (4) instruccion -> . instruccion_imprimir
    (5) instruccion -> . instruccion_if
    (6) instruccion -> . instruccion_asignacion
    (7) instruccion -> . instruccion_while
    (8) instruccion -> . instruccion_break
    (9) instruccion -> . instruccion_return
    (10) instruccion -> . instruccion_funcion
    (11) instruccion -> . instruccion_llamada
    (12) instruccion -> . instruccion_continue
    (13) instruccion -> . instruccion_for
    (14) instruccion -> . instruccion_struct
    (15) instruccion_imprimir -> . RPRINTLN P_IZQ parametros_print P_DER
    (16) instruccion_imprimir -> . RPRINT P_IZQ parametros_print P_DER
    (20) instruccion_if -> . RIF expresion instrucciones REND
    (21) instruccion_if -> . RIF expresion instrucciones RELSE instrucciones REND
    (22) instruccion_if -> . RIF expresion instrucciones listaELSEIF REND
    (26) instruccion_asignacion -> . ID IGUAL expresion
    (27) instruccion_asignacion -> . ID accesos IGUAL expresion
    (28) instruccion_while -> . RWHILE expresion instrucciones REND
    (29) instruccion_break -> . RBREAK
    (31) instruccion_return -> . RRETURN
    (32) instruccion_return -> . RRETURN expresion
    (33) instruccion_funcion -> . RFUNC ID P_IZQ parametros P_DER TIPO tipo_dato instrucciones REND
    (34) instruccion_funcion -> . RFUNC ID P_IZQ P_DER TIPO tipo_dato instrucciones REND
    (44) instruccion_llamada -> . ID P_IZQ P_DER
    (45) instruccion_llamada -> . ID P_IZQ expresiones P_DER
    (30) instruccion_continue -> . RCONTINUE
    (51) instruccion_for -> . RFOR ID RIN range instrucciones REND
    (48) instruccion_struct -> . RSTRUCT ID atributos REND

    RPRINTLN        shift and go to state 15
    RPRINT          shift and go to state 16
    RIF             shift and go to state 17
    ID              shift and go to state 18
    RWHILE          shift and go to state 19
    RBREAK          shift and go to state 20
    RRETURN         shift and go to state 21
    RFUNC           shift and go to state 22
    RCONTINUE       shift and go to state 23
    RFOR            shift and go to state 24
    RSTRUCT         shift and go to state 25

    start                          shift and go to state 1
    instrucciones                  shift and go to state 2
    instruccion                    shift and go to state 3
    instruccion_imprimir           shift and go to state 4
    instruccion_if                 shift and go to state 5
    instruccion_asignacion         shift and go to state 6
    instruccion_while              shift and go to state 7
    instruccion_break              shift and go to state 8
    instruccion_return             shift and go to state 9
    instruccion_funcion            shift and go to state 10
    instruccion_llamada            shift and go to state 11
    instruccion_continue           shift and go to state 12
    instruccion_for                shift and go to state 13
    instruccion_struct             shift and go to state 14

state 1

    (0) S' -> start .



state 2

    (1) start -> instrucciones .
    (2) instrucciones -> instrucciones . instruccion PUNTOCOMA
    (4) instruccion -> . instruccion_imprimir
    (5) instruccion -> . instruccion_if
    (6) instruccion -> . instruccion_asignacion
    (7) instruccion -> . instruccion_while
    (8) instruccion -> . instruccion_break
    (9) instruccion -> . instruccion_return
    (10) instruccion -> . instruccion_funcion
    (11) instruccion -> . instruccion_llamada
    (12) instruccion -> . instruccion_continue
    (13) instruccion -> . instruccion_for
    (14) instruccion -> . instruccion_struct
    (15) instruccion_imprimir -> . RPRINTLN P_IZQ parametros_print P_DER
    (16) instruccion_imprimir -> . RPRINT P_IZQ parametros_print P_DER
    (20) instruccion_if -> . RIF expresion instrucciones REND
    (21) instruccion_if -> . RIF expresion instrucciones RELSE instrucciones REND
    (22) instruccion_if -> . RIF expresion instrucciones listaELSEIF REND
    (26) instruccion_asignacion -> . ID IGUAL expresion
    (27) instruccion_asignacion -> . ID accesos IGUAL expresion
    (28) instruccion_while -> . RWHILE expresion instrucciones REND
    (29) instruccion_break -> . RBREAK
    (31) instruccion_return -> . RRETURN
    (32) instruccion_return -> . RRETURN expresion
    (33) instruccion_funcion -> . RFUNC ID P_IZQ parametros P_DER TIPO tipo_dato instrucciones REND
    (34) instruccion_funcion -> . RFUNC ID P_IZQ P_DER TIPO tipo_dato instrucciones REND
    (44) instruccion_llamada -> . ID P_IZQ P_DER
    (45) instruccion_llamada -> . ID P_IZQ expresiones P_DER
    (30) instruccion_continue -> . RCONTINUE
    (51) instruccion_for -> . RFOR ID RIN range instrucciones REND
    (48) instruccion_struct -> . RSTRUCT ID atributos REND

    $end            reduce using rule 1 (start -> instrucciones .)
    RPRINTLN        shift and go to state 15
    RPRINT          shift and go to state 16
    RIF             shift and go to state 17
    ID              shift and go to state 18
    RWHILE          shift and go to state 19
    RBREAK          shift and go to state 20
    RRETURN         shift and go to state 21
    RFUNC           shift and go to state 22
    RCONTINUE       shift and go to state 23
    RFOR            shift and go to state 24
    RSTRUCT         shift and go to state 25

    instruccion                    shift and go to state 26
    instruccion_imprimir           shift and go to state 4
    instruccion_if                 shift and go to state 5
    instruccion_asignacion         shift and go to state 6
    instruccion_while              shift and go to state 7
    instruccion_break              shift and go to state 8
    instruccion_return             shift and go to state 9
    instruccion_funcion            shift and go to state 10
    instruccion_llamada            shift and go to state 11
    instruccion_continue           shift and go to state 12
    instruccion_for                shift and go to state 13
    instruccion_struct             shift and go to state 14

state 3

    (3) instrucciones -> instruccion . PUNTOCOMA

    PUNTOCOMA       shift and go to state 27


state 4

    (4) instruccion -> instruccion_imprimir .

    PUNTOCOMA       reduce using rule 4 (instruccion -> instruccion_imprimir .)


state 5

    (5) instruccion -> instruccion_if .

    PUNTOCOMA       reduce using rule 5 (instruccion -> instruccion_if .)


state 6

    (6) instruccion -> instruccion_asignacion .

    PUNTOCOMA       reduce using rule 6 (instruccion -> instruccion_asignacion .)


state 7

    (7) instruccion -> instruccion_while .

    PUNTOCOMA       reduce using rule 7 (instruccion -> instruccion_while .)


state 8

    (8) instruccion -> instruccion_break .

    PUNTOCOMA       reduce using rule 8 (instruccion -> instruccion_break .)


state 9

    (9) instruccion -> instruccion_return .

    PUNTOCOMA       reduce using rule 9 (instruccion -> instruccion_return .)


state 10

    (10) instruccion -> instruccion_funcion .

    PUNTOCOMA       reduce using rule 10 (instruccion -> instruccion_funcion .)


state 11

    (11) instruccion -> instruccion_llamada .

    PUNTOCOMA       reduce using rule 11 (instruccion -> instruccion_llamada .)


state 12

    (12) instruccion -> instruccion_continue .

    PUNTOCOMA       reduce using rule 12 (instruccion -> instruccion_continue .)


state 13

    (13) instruccion -> instruccion_for .

    PUNTOCOMA       reduce using rule 13 (instruccion -> instruccion_for .)


state 14

    (14) instruccion -> instruccion_struct .

    PUNTOCOMA       reduce using rule 14 (instruccion -> instruccion_struct .)


state 15

    (15) instruccion_imprimir -> RPRINTLN . P_IZQ parametros_print P_DER

    P_IZQ           shift and go to state 28


state 16

    (16) instruccion_imprimir -> RPRINT . P_IZQ parametros_print P_DER

    P_IZQ           shift and go to state 29


state 17

    (20) instruccion_if -> RIF . expresion instrucciones REND
    (21) instruccion_if -> RIF . expresion instrucciones RELSE instrucciones REND
    (22) instruccion_if -> RIF . expresion instrucciones listaELSEIF REND
    (54) expresion -> . expresion MAS expresion
    (55) expresion -> . expresion MENOS expresion
    (56) expresion -> . expresion POR expresion
    (57) expresion -> . expresion DIVIDIDO expresion
    (58) expresion -> . expresion MODULO expresion
    (59) expresion -> . expresion POTENCIA expresion
    (60) expresion -> . expresion MENOR expresion
    (61) expresion -> . expresion MENORIGUAL expresion
    (62) expresion -> . expresion MAYOR expresion
    (63) expresion -> . expresion MAYORIGUAL expresion
    (64) expresion -> . expresion COMPARACION expresion
    (65) expresion -> . expresion DISTINTO expresion
    (66) expresion -> . expresion AND expresion
    (67) expresion -> . expresion OR expresion
    (68) expresion -> . ID
    (69) expresion -> . instruccion_llamada
    (70) expresion -> . expresion DOT ID
    (71) expresion -> . ID DOT ID
    (72) expresion -> . ID accesos
    (76) expresion -> . ENTERO
    (77) expresion -> . P_IZQ expresion P_DER
    (78) expresion -> . C_IZQ parametros_print C_DER
    (79) expresion -> . DECIMAL
    (80) expresion -> . CADENA
    (81) expresion -> . CARACTER
    (82) expresion -> . RTRUE
    (83) expresion -> . RFALSE
    (44) instruccion_llamada -> . ID P_IZQ P_DER
    (45) instruccion_llamada -> . ID P_IZQ expresiones P_DER

    ID              shift and go to state 31
    ENTERO          shift and go to state 33
    P_IZQ           shift and go to state 34
    C_IZQ           shift and go to state 35
    DECIMAL         shift and go to state 36
    CADENA          shift and go to state 37
    CARACTER        shift and go to state 38
    RTRUE           shift and go to state 39
    RFALSE          shift and go to state 40

    expresion                      shift and go to state 30
    instruccion_llamada            shift and go to state 32

state 18

    (26) instruccion_asignacion -> ID . IGUAL expresion
    (27) instruccion_asignacion -> ID . accesos IGUAL expresion
    (44) instruccion_llamada -> ID . P_IZQ P_DER
    (45) instruccion_llamada -> ID . P_IZQ expresiones P_DER
    (73) accesos -> . accesos acceso
    (74) accesos -> . acceso
    (75) acceso -> . C_IZQ expresion C_DER

    IGUAL           shift and go to state 41
    P_IZQ           shift and go to state 43
    C_IZQ           shift and go to state 45

    accesos                        shift and go to state 42
    acceso                         shift and go to state 44

state 19

    (28) instruccion_while -> RWHILE . expresion instrucciones REND
    (54) expresion -> . expresion MAS expresion
    (55) expresion -> . expresion MENOS expresion
    (56) expresion -> . expresion POR expresion
    (57) expresion -> . expresion DIVIDIDO expresion
    (58) expresion -> . expresion MODULO expresion
    (59) expresion -> . expresion POTENCIA expresion
    (60) expresion -> . expresion MENOR expresion
    (61) expresion -> . expresion MENORIGUAL expresion
    (62) expresion -> . expresion MAYOR expresion
    (63) expresion -> . expresion MAYORIGUAL expresion
    (64) expresion -> . expresion COMPARACION expresion
    (65) expresion -> . expresion DISTINTO expresion
    (66) expresion -> . expresion AND expresion
    (67) expresion -> . expresion OR expresion
    (68) expresion -> . ID
    (69) expresion -> . instruccion_llamada
    (70) expresion -> . expresion DOT ID
    (71) expresion -> . ID DOT ID
    (72) expresion -> . ID accesos
    (76) expresion -> . ENTERO
    (77) expresion -> . P_IZQ expresion P_DER
    (78) expresion -> . C_IZQ parametros_print C_DER
    (79) expresion -> . DECIMAL
    (80) expresion -> . CADENA
    (81) expresion -> . CARACTER
    (82) expresion -> . RTRUE
    (83) expresion -> . RFALSE
    (44) instruccion_llamada -> . ID P_IZQ P_DER
    (45) instruccion_llamada -> . ID P_IZQ expresiones P_DER

    ID              shift and go to state 31
    ENTERO          shift and go to state 33
    P_IZQ           shift and go to state 34
    C_IZQ           shift and go to state 35
    DECIMAL         shift and go to state 36
    CADENA          shift and go to state 37
    CARACTER        shift and go to state 38
    RTRUE           shift and go to state 39
    RFALSE          shift and go to state 40

    expresion                      shift and go to state 46
    instruccion_llamada            shift and go to state 32

state 20

    (29) instruccion_break -> RBREAK .

    PUNTOCOMA       reduce using rule 29 (instruccion_break -> RBREAK .)


state 21

    (31) instruccion_return -> RRETURN .
    (32) instruccion_return -> RRETURN . expresion
    (54) expresion -> . expresion MAS expresion
    (55) expresion -> . expresion MENOS expresion
    (56) expresion -> . expresion POR expresion
    (57) expresion -> . expresion DIVIDIDO expresion
    (58) expresion -> . expresion MODULO expresion
    (59) expresion -> . expresion POTENCIA expresion
    (60) expresion -> . expresion MENOR expresion
    (61) expresion -> . expresion MENORIGUAL expresion
    (62) expresion -> . expresion MAYOR expresion
    (63) expresion -> . expresion MAYORIGUAL expresion
    (64) expresion -> . expresion COMPARACION expresion
    (65) expresion -> . expresion DISTINTO expresion
    (66) expresion -> . expresion AND expresion
    (67) expresion -> . expresion OR expresion
    (68) expresion -> . ID
    (69) expresion -> . instruccion_llamada
    (70) expresion -> . expresion DOT ID
    (71) expresion -> . ID DOT ID
    (72) expresion -> . ID accesos
    (76) expresion -> . ENTERO
    (77) expresion -> . P_IZQ expresion P_DER
    (78) expresion -> . C_IZQ parametros_print C_DER
    (79) expresion -> . DECIMAL
    (80) expresion -> . CADENA
    (81) expresion -> . CARACTER
    (82) expresion -> . RTRUE
    (83) expresion -> . RFALSE
    (44) instruccion_llamada -> . ID P_IZQ P_DER
    (45) instruccion_llamada -> . ID P_IZQ expresiones P_DER

    PUNTOCOMA       reduce using rule 31 (instruccion_return -> RRETURN .)
    ID              shift and go to state 31
    ENTERO          shift and go to state 33
    P_IZQ           shift and go to state 34
    C_IZQ           shift and go to state 35
    DECIMAL         shift and go to state 36
    CADENA          shift and go to state 37
    CARACTER        shift and go to state 38
    RTRUE           shift and go to state 39
    RFALSE          shift and go to state 40

    expresion                      shift and go to state 47
    instruccion_llamada            shift and go to state 32

state 22

    (33) instruccion_funcion -> RFUNC . ID P_IZQ parametros P_DER TIPO tipo_dato instrucciones REND
    (34) instruccion_funcion -> RFUNC . ID P_IZQ P_DER TIPO tipo_dato instrucciones REND

    ID              shift and go to state 48


state 23

    (30) instruccion_continue -> RCONTINUE .

    PUNTOCOMA       reduce using rule 30 (instruccion_continue -> RCONTINUE .)


state 24

    (51) instruccion_for -> RFOR . ID RIN range instrucciones REND

    ID              shift and go to state 49


state 25

    (48) instruccion_struct -> RSTRUCT . ID atributos REND

    ID              shift and go to state 50


state 26

    (2) instrucciones -> instrucciones instruccion . PUNTOCOMA

    PUNTOCOMA       shift and go to state 51


state 27

    (3) instrucciones -> instruccion PUNTOCOMA .

    RPRINTLN        reduce using rule 3 (instrucciones -> instruccion PUNTOCOMA .)
    RPRINT          reduce using rule 3 (instrucciones -> instruccion PUNTOCOMA .)
    RIF             reduce using rule 3 (instrucciones -> instruccion PUNTOCOMA .)
    ID              reduce using rule 3 (instrucciones -> instruccion PUNTOCOMA .)
    RWHILE          reduce using rule 3 (instrucciones -> instruccion PUNTOCOMA .)
    RBREAK          reduce using rule 3 (instrucciones -> instruccion PUNTOCOMA .)
    RRETURN         reduce using rule 3 (instrucciones -> instruccion PUNTOCOMA .)
    RFUNC           reduce using rule 3 (instrucciones -> instruccion PUNTOCOMA .)
    RCONTINUE       reduce using rule 3 (instrucciones -> instruccion PUNTOCOMA .)
    RFOR            reduce using rule 3 (instrucciones -> instruccion PUNTOCOMA .)
    RSTRUCT         reduce using rule 3 (instrucciones -> instruccion PUNTOCOMA .)
    $end            reduce using rule 3 (instrucciones -> instruccion PUNTOCOMA .)
    REND            reduce using rule 3 (instrucciones -> instruccion PUNTOCOMA .)
    RELSE           reduce using rule 3 (instrucciones -> instruccion PUNTOCOMA .)
    RELSEIF         reduce using rule 3 (instrucciones -> instruccion PUNTOCOMA .)


state 28

    (15) instruccion_imprimir -> RPRINTLN P_IZQ . parametros_print P_DER
    (17) parametros_print -> . parametros_print COMA parametro_print
    (18) parametros_print -> . parametro_print
    (19) parametro_print -> . expresion
    (54) expresion -> . expresion MAS expresion
    (55) expresion -> . expresion MENOS expresion
    (56) expresion -> . expresion POR expresion
    (57) expresion -> . expresion DIVIDIDO expresion
    (58) expresion -> . expresion MODULO expresion
    (59) expresion -> . expresion POTENCIA expresion
    (60) expresion -> . expresion MENOR expresion
    (61) expresion -> . expresion MENORIGUAL expresion
    (62) expresion -> . expresion MAYOR expresion
    (63) expresion -> . expresion MAYORIGUAL expresion
    (64) expresion -> . expresion COMPARACION expresion
    (65) expresion -> . expresion DISTINTO expresion
    (66) expresion -> . expresion AND expresion
    (67) expresion -> . expresion OR expresion
    (68) expresion -> . ID
    (69) expresion -> . instruccion_llamada
    (70) expresion -> . expresion DOT ID
    (71) expresion -> . ID DOT ID
    (72) expresion -> . ID accesos
    (76) expresion -> . ENTERO
    (77) expresion -> . P_IZQ expresion P_DER
    (78) expresion -> . C_IZQ parametros_print C_DER
    (79) expresion -> . DECIMAL
    (80) expresion -> . CADENA
    (81) expresion -> . CARACTER
    (82) expresion -> . RTRUE
    (83) expresion -> . RFALSE
    (44) instruccion_llamada -> . ID P_IZQ P_DER
    (45) instruccion_llamada -> . ID P_IZQ expresiones P_DER

    ID              shift and go to state 31
    ENTERO          shift and go to state 33
    P_IZQ           shift and go to state 34
    C_IZQ           shift and go to state 35
    DECIMAL         shift and go to state 36
    CADENA          shift and go to state 37
    CARACTER        shift and go to state 38
    RTRUE           shift and go to state 39
    RFALSE          shift and go to state 40

    parametros_print               shift and go to state 52
    parametro_print                shift and go to state 53
    expresion                      shift and go to state 54
    instruccion_llamada            shift and go to state 32

state 29

    (16) instruccion_imprimir -> RPRINT P_IZQ . parametros_print P_DER
    (17) parametros_print -> . parametros_print COMA parametro_print
    (18) parametros_print -> . parametro_print
    (19) parametro_print -> . expresion
    (54) expresion -> . expresion MAS expresion
    (55) expresion -> . expresion MENOS expresion
    (56) expresion -> . expresion POR expresion
    (57) expresion -> . expresion DIVIDIDO expresion
    (58) expresion -> . expresion MODULO expresion
    (59) expresion -> . expresion POTENCIA expresion
    (60) expresion -> . expresion MENOR expresion
    (61) expresion -> . expresion MENORIGUAL expresion
    (62) expresion -> . expresion MAYOR expresion
    (63) expresion -> . expresion MAYORIGUAL expresion
    (64) expresion -> . expresion COMPARACION expresion
    (65) expresion -> . expresion DISTINTO expresion
    (66) expresion -> . expresion AND expresion
    (67) expresion -> . expresion OR expresion
    (68) expresion -> . ID
    (69) expresion -> . instruccion_llamada
    (70) expresion -> . expresion DOT ID
    (71) expresion -> . ID DOT ID
    (72) expresion -> . ID accesos
    (76) expresion -> . ENTERO
    (77) expresion -> . P_IZQ expresion P_DER
    (78) expresion -> . C_IZQ parametros_print C_DER
    (79) expresion -> . DECIMAL
    (80) expresion -> . CADENA
    (81) expresion -> . CARACTER
    (82) expresion -> . RTRUE
    (83) expresion -> . RFALSE
    (44) instruccion_llamada -> . ID P_IZQ P_DER
    (45) instruccion_llamada -> . ID P_IZQ expresiones P_DER

    ID              shift and go to state 31
    ENTERO          shift and go to state 33
    P_IZQ           shift and go to state 34
    C_IZQ           shift and go to state 35
    DECIMAL         shift and go to state 36
    CADENA          shift and go to state 37
    CARACTER        shift and go to state 38
    RTRUE           shift and go to state 39
    RFALSE          shift and go to state 40

    parametros_print               shift and go to state 55
    parametro_print                shift and go to state 53
    expresion                      shift and go to state 54
    instruccion_llamada            shift and go to state 32

state 30

    (20) instruccion_if -> RIF expresion . instrucciones REND
    (21) instruccion_if -> RIF expresion . instrucciones RELSE instrucciones REND
    (22) instruccion_if -> RIF expresion . instrucciones listaELSEIF REND
    (54) expresion -> expresion . MAS expresion
    (55) expresion -> expresion . MENOS expresion
    (56) expresion -> expresion . POR expresion
    (57) expresion -> expresion . DIVIDIDO expresion
    (58) expresion -> expresion . MODULO expresion
    (59) expresion -> expresion . POTENCIA expresion
    (60) expresion -> expresion . MENOR expresion
    (61) expresion -> expresion . MENORIGUAL expresion
    (62) expresion -> expresion . MAYOR expresion
    (63) expresion -> expresion . MAYORIGUAL expresion
    (64) expresion -> expresion . COMPARACION expresion
    (65) expresion -> expresion . DISTINTO expresion
    (66) expresion -> expresion . AND expresion
    (67) expresion -> expresion . OR expresion
    (70) expresion -> expresion . DOT ID
    (2) instrucciones -> . instrucciones instruccion PUNTOCOMA
    (3) instrucciones -> . instruccion PUNTOCOMA
    (4) instruccion -> . instruccion_imprimir
    (5) instruccion -> . instruccion_if
    (6) instruccion -> . instruccion_asignacion
    (7) instruccion -> . instruccion_while
    (8) instruccion -> . instruccion_break
    (9) instruccion -> . instruccion_return
    (10) instruccion -> . instruccion_funcion
    (11) instruccion -> . instruccion_llamada
    (12) instruccion -> . instruccion_continue
    (13) instruccion -> . instruccion_for
    (14) instruccion -> . instruccion_struct
    (15) instruccion_imprimir -> . RPRINTLN P_IZQ parametros_print P_DER
    (16) instruccion_imprimir -> . RPRINT P_IZQ parametros_print P_DER
    (20) instruccion_if -> . RIF expresion instrucciones REND
    (21) instruccion_if -> . RIF expresion instrucciones RELSE instrucciones REND
    (22) instruccion_if -> . RIF expresion instrucciones listaELSEIF REND
    (26) instruccion_asignacion -> . ID IGUAL expresion
    (27) instruccion_asignacion -> . ID accesos IGUAL expresion
    (28) instruccion_while -> . RWHILE expresion instrucciones REND
    (29) instruccion_break -> . RBREAK
    (31) instruccion_return -> . RRETURN
    (32) instruccion_return -> . RRETURN expresion
    (33) instruccion_funcion -> . RFUNC ID P_IZQ parametros P_DER TIPO tipo_dato instrucciones REND
    (34) instruccion_funcion -> . RFUNC ID P_IZQ P_DER TIPO tipo_dato instrucciones REND
    (44) instruccion_llamada -> . ID P_IZQ P_DER
    (45) instruccion_llamada -> . ID P_IZQ expresiones P_DER
    (30) instruccion_continue -> . RCONTINUE
    (51) instruccion_for -> . RFOR ID RIN range instrucciones REND
    (48) instruccion_struct -> . RSTRUCT ID atributos REND

    MAS             shift and go to state 57
    MENOS           shift and go to state 58
    POR             shift and go to state 59
    DIVIDIDO        shift and go to state 60
    MODULO          shift and go to state 61
    POTENCIA        shift and go to state 62
    MENOR           shift and go to state 63
    MENORIGUAL      shift and go to state 64
    MAYOR           shift and go to state 65
    MAYORIGUAL      shift and go to state 66
    COMPARACION     shift and go to state 67
    DISTINTO        shift and go to state 68
    AND             shift and go to state 69
    OR              shift and go to state 70
    DOT             shift and go to state 71
    RPRINTLN        shift and go to state 15
    RPRINT          shift and go to state 16
    RIF             shift and go to state 17
    ID              shift and go to state 18
    RWHILE          shift and go to state 19
    RBREAK          shift and go to state 20
    RRETURN         shift and go to state 21
    RFUNC           shift and go to state 22
    RCONTINUE       shift and go to state 23
    RFOR            shift and go to state 24
    RSTRUCT         shift and go to state 25

    instrucciones                  shift and go to state 56
    instruccion                    shift and go to state 3
    instruccion_imprimir           shift and go to state 4
    instruccion_if                 shift and go to state 5
    instruccion_asignacion         shift and go to state 6
    instruccion_while              shift and go to state 7
    instruccion_break              shift and go to state 8
    instruccion_return             shift and go to state 9
    instruccion_funcion            shift and go to state 10
    instruccion_llamada            shift and go to state 11
    instruccion_continue           shift and go to state 12
    instruccion_for                shift and go to state 13
    instruccion_struct             shift and go to state 14

state 31

    (68) expresion -> ID .
    (71) expresion -> ID . DOT ID
    (72) expresion -> ID . accesos
    (44) instruccion_llamada -> ID . P_IZQ P_DER
    (45) instruccion_llamada -> ID . P_IZQ expresiones P_DER
    (73) accesos -> . accesos acceso
    (74) accesos -> . acceso
    (75) acceso -> . C_IZQ expresion C_DER
